--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/real_estate_voice_ai?schema=public"
 N8N_WEBHOOK_SECRET="replace-with-a-shared-secret"
+
+# Supabase project URL
+NEXT_PUBLIC_SUPABASE_URL="https://your-project-ref.supabase.co"
+
+# Recommended for server-side API routes (bypasses RLS, keep secret)
+SUPABASE_SERVICE_ROLE_KEY="your-service-role-key"
+
+# Optional fallback if you only want publishable key based auth
+NEXT_PUBLIC_SUPABASE_PUBLISHABLE_DEFAULT_KEY="your-publishable-key"
