--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "typecheck": "tsc --noEmit",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:seed": "tsx prisma/seed.ts"
+    "prisma:seed": "tsx prisma/seed.ts",
+    "db:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@supabase/supabase-js": "2.57.4",
     "@prisma/client": "6.19.2",
     "next": "15.5.12",
     "react": "19.2.4",
