vs-codex ! chek

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,28 @@
-N8N_WEBHOOK_SECRET="replace-with-a-shared-secret"
+# Prisma connection string for migrations and seeding
+DATABASE_URL="postgresql://user:password@host:5432/postgres?sslmode=require"
 
-# Supabase project URL
+# Supabase project URL + publishable key (minimal setup)
 NEXT_PUBLIC_SUPABASE_URL="https://your-project-ref.supabase.co"
-
-# Recommended for server-side API routes (bypasses RLS, keep secret)
-SUPABASE_SERVICE_ROLE_KEY="your-service-role-key"
-
-# Optional fallback if you only want publishable key based auth
 NEXT_PUBLIC_SUPABASE_PUBLISHABLE_DEFAULT_KEY="your-publishable-key"
+
+# Optional: required only when Hindi translation fallback is needed
+OPENAI_API_KEY="sk-..."
+
+# Required for call dispatch to Omni
+# Use full endpoint URL (preferred)
+OMNI_URL="https://backend.omnidim.io/api/v1/calls/dispatch"
+
+# Optional fallback if you prefer base URL style instead of OMNI_URL
+# OMNI_BASE_URL="https://backend.omnidim.io"
+
+OMNI_API_KEY="your-omni-api-key"
+OMNI_AGENT_ID="your-omni-agent-id"
+
+# Optional; defaults to 1720 to match current n8n workflow
+# OMNI_FROM_NUMBER_ID="1720"
+
+# Optional hardening (not required for basic deployment testing)
+# SUPABASE_SERVICE_ROLE_KEY="your-service-role-key"
+# N8N_WEBHOOK_SECRET="replace-with-a-shared-secret"
+# N8N_DISPATCH_SECRET="replace-with-a-dispatch-secret"
+# CRON_JOB_SECRET="replace-with-a-dispatch-secret"
