--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,7 @@ OMNI_AGENT_ID="your-omni-agent-id"
 
 # Optional hardening (not required for basic deployment testing)
 # SUPABASE_SERVICE_ROLE_KEY="your-service-role-key"
+# SUPABASE_SECRET_KEY="your-supabase-secret-key"
 # N8N_WEBHOOK_SECRET="replace-with-a-shared-secret"
 # N8N_DISPATCH_SECRET="replace-with-a-dispatch-secret"
 # CRON_JOB_SECRET="replace-with-a-dispatch-secret"
